[gd_scene load_steps=5 format=2]

[ext_resource path="res://GameTimer.gd" type="Script" id=1]
[ext_resource path="res://assets/verdanab.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 37
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 3 )

[node name="GameTimer" type="Timer"]
one_shot = true
script = ExtResource( 1 )

[node name="TimeRemainingLabel" type="RichTextLabel" parent="."]
margin_left = 23.0
margin_top = 24.0
margin_right = 156.0
margin_bottom = 157.0
custom_fonts/normal_font = SubResource( 1 )

[node name="ReadyLabel" type="RichTextLabel" parent="."]
visible = false
margin_left = 300.0
margin_top = 217.0
margin_right = 784.0
margin_bottom = 369.0
custom_fonts/normal_font = SubResource( 2 )
text = "Ready?"

[connection signal="timeout" from="." to="." method="_on_GameTimer_timeout"]
